--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,6 +3,10 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --dark-green: #0B8B63;
+  --soft-green: #4CAB8E;
+  --yellow: #FFDD1F;
+  --gold: #FFE388;
 }
 
 @theme inline {
@@ -15,6 +19,10 @@
   :root {
     --background: #0F1218;
     --foreground: #ffffff;
+    --dark-green: #0B8B63;
+    --soft-green: #4CAB8E;
+    --yellow: #FFDD1F;
+    --gold: #FFE388;
   }
 }
 
