--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,8 +1,8 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: #0F1218;
+  --foreground: #ffffff;
   --dark-green: #0B8B63;
   --soft-green: #4CAB8E;
   --yellow: #FFDD1F;
@@ -34,7 +34,7 @@
 
 body {
   background-color: var(--background);
-  color: var(--foreground);
+  color: white;
   font-family: var(--font-poppins), Arial, Helvetica, sans-serif;
 }
 
