--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -57,7 +57,17 @@ a {
   h3 {
     font-size: 2rem !important;
     font-weight: 700 !important;
-    margin: 2rem 0 1rem 0 !important;
+    margin: 2.5rem 0 1.5rem 0 !important;
+  }
+
+  ul {
+    padding-inline-start: 2rem;
+    margin-bottom: 2rem;
+
+    li {
+      list-style: disc;
+      margin-bottom: 1rem;
+    }
   }
 
   p {
